--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,9 @@ export(reMesh)
 export(readGPSA)
 export(readPts)
 export(scoresPlot)
+exportClasses(block)
+exportClasses(blockList)
+exportClasses(blockResult)
 import(Morpho)
 import(RGCCA)
 import(Rvcg)
