--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,11 +13,36 @@ export(readPts)
 export(scoresPlot)
 exportClasses(block)
 exportClasses(blockList)
-import(Morpho)
-import(RGCCA)
-import(Rvcg)
-import(adephylo)
-import(data.table)
-import(geomorph)
-import(methods)
-import(phytools)
+importFrom(Morpho,cSize)
+importFrom(Morpho,meshcube)
+importFrom(Morpho,pcAlign)
+importFrom(Morpho,read.pts)
+importFrom(Morpho,scalemesh)
+importFrom(RGCCA,rgcca)
+importFrom(Rvcg,vcgImport)
+importFrom(Rvcg,vcgMeshres)
+importFrom(Rvcg,vcgPlyWrite)
+importFrom(Rvcg,vcgQEdecim)
+importFrom(Rvcg,vcgSmooth)
+importFrom(Rvcg,vcgUniformRemesh)
+importFrom(adephylo,distRoot)
+importFrom(data.table,fread)
+importFrom(geomorph,arrayspecs)
+importFrom(geomorph,define.sliders)
+importFrom(geomorph,gpagen)
+importFrom(geomorph,mshape)
+importFrom(geomorph,two.d.array)
+importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,rgb)
+importFrom(graphics,layout)
+importFrom(graphics,text)
+importFrom(graphics,title)
+importFrom(methods,new)
+importFrom(methods,setClass)
+importFrom(phytools,phylomorphospace)
+importFrom(rgl,mfrow3d)
+importFrom(rgl,plot3d)
+importFrom(rgl,points3d)
+importFrom(stats,na.omit)
+importFrom(stats,prcomp)
+importFrom(stats,runif)
