--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,10 +25,9 @@ Imports:
   rgl,
   Rvcg,
   stats
-Suggests:
-  here,
-  kableExtra
 RoxygenNote: 7.1.1
 Suggests: knitr,
-    rmarkdown
+    kableExtra,
+    rmarkdown,
+    here
 VignetteBuilder: knitr
