--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,8 @@ Imports:
   Rvcg,
   stats
 RoxygenNote: 7.1.1
-Suggests: knitr,
+Suggests: 
+    knitr,
     kableExtra,
     rmarkdown,
     here
