--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,13 @@ Package: morphoBlocks
 Type: Package
 Title: Constructing a Multiple-Part Morphospace Using a Multiple-Block Method
 Version: 0.1.0
-Author: as.person(c(
-    "Daniel Thomas <d.b.thomas@massey.ac.nz> [aut, cre]",
-    "Aaron Harmer <a.harmer@massey.ac.nz> [aut]"
-  ))
+Author: c(person(given = "Daniel",
+           family = "Thomas",
+           role = c("aut", "cre"),
+           email = "d.b.thomas@massey.ac.nz"),
+    person(given = "Aaron",
+           family = "Harmer",
+           role = "aut"))
 Maintainer: Daniel Thomas <d.b.thomas@massey.ac.nz>
 Description: The 'morphoBlocks' package provides a workflow for constructing a multiple-part morphospace with regularised consensus principal component analysis (RCPCA) using either traditional landmarks or pseudolandmarks.
 Depends: R (>= 3.5.0)
