--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,8 +28,9 @@ Imports:
   stats
 RoxygenNote: 7.1.1
 Suggests: 
+    here,
     knitr,
     kableExtra,
     rmarkdown,
-    here
+    pandoc
 VignetteBuilder: knitr
