--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,7 +2,8 @@ pandoc: 2.11.4
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
+  datasetSize: datasetSize.html
   morphoBlocksMethods: morphoBlocksMethods.html
   penguinWings: penguinWings.html
-last_built: 2021-08-31T09:15Z
+last_built: 2021-10-28T20:51Z
 
